// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="Letter "
  >
    <div
      class="Letter-hex"
    >
      ⬢
    </div>
    <span>
      A
    </span>
  </div>
</div>
`;

exports[`matches snapshot: center letter 1`] = `
<div>
  <div
    class="Letter Letter-isCenter"
  >
    <div
      class="Letter-hex"
    >
      ⬢
    </div>
    <span>
      A
    </span>
  </div>
</div>
`;
